--- a/product/src/index.html
+++ b/product/src/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <script src="./lib/three.min.js"></script>
-    <script src="./lib/tween.min.js"></script>
+    <script src="./lib/tween.umd.min.js"></script>
     <script src="./lib/TrackballControls.js"></script>
     <script src="./lib/CSS3DRenderer.js"></script>
     <script src="./lib/ajax.js"></script>
