change welcome screen

--- a/product/src/index.html
+++ b/product/src/index.html
@@ -26,9 +26,11 @@
       <div id="musicBox" class="music-box" title="播放/暂停背景音乐">Music</div>
     </div>
 
-    <div id="prizeBar"></div>
+    <div id="welcomeTxt">山东海外六好文化旅游产品抽奖系统</div>
 
-    <div id="container"></div>
+    <div id="prizeBar" style="display: none;"></div>
+
+    <div id="container" style="display: none;"></div>
 
     <div id="menu">
       <button id="enter">进入抽奖</button>
