更新样式屏蔽重新抽奖

--- a/product/src/index.html
+++ b/product/src/index.html
@@ -28,15 +28,15 @@
 
     <div id="welcomeTxt">山东海外六好文化旅游产品抽奖系统</div>
 
-    <div id="prizeBar" style="display: none;"></div>
+    <div id="prizeBar" style="display: none"></div>
 
-    <div id="container" style="display: none;"></div>
+    <div id="container" style="display: none"></div>
 
     <div id="menu">
       <button id="enter">进入抽奖</button>
       <div id="lotteryBar" class="none">
         <button id="lottery">开始</button>
-        <button id="reLottery">重新抽奖</button>
+        <button id="reLottery" style="display: none">重新抽奖</button>
         <button id="save">导出抽奖结果</button>
         <button id="reset" class="margin-l-40">重置</button>
       </div>
